--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,9 +1,9 @@
 :root {
-  --primary-color: #ff9854;
-
-  --van-search-left-icon-color: var(--primary-color) !important;
+    --primary-color: #ff9854;
+   --fs:30px;
+    --van-search-left-icon-color: var(--primary-color) !important;
 }
 
 body {
-  font-size: 14px;
+    font-size: 14px;
 }
