--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,9 +1,14 @@
 :root {
     --primary-color: #ff9854;
-   --fs:30px;
+    --fs: 30px;
     --van-search-left-icon-color: var(--primary-color) !important;
+    --line-color: #faf8f9;
 }
 
 body {
     font-size: 14px;
+}
+
+.bottom-gray-line {
+    border-bottom: 1px solid var(--line-color);
 }
