--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -3,6 +3,7 @@
     --fs: 30px;
     --van-search-left-icon-color: var(--primary-color) !important;
     --line-color: #faf8f9;
+    --theme-linear-gradient: linear-gradient(90deg, #fa8c1d, #fcaf3f);
 }
 
 body {
